# cal-center-price

./: .gitignore  .gitlab-ci.yml  Dockerfile  README copy.md  README.md  main.py  pyproject.toml
config/: all_config.py
database/: connection.py  get_data.py  update_data.py
deployment/prod/: deployment.yaml  kustomization.yaml
exchange/: price_binance.py  price_binance_crypto_usdt.py  price_binance_th.py  price_bitkub.py  price_btz.py  price_invx.py  price_okx.py  price_xs.py  price_z.py
helper/: cal_summary_price_19tech.py  cal_summary_price_preset0.py  cal_summary_price_preset1.py  cal_summary_price_preset2.py  cal_summary_price_preset3.py  cal_summary_price_waz.py  delete_data.py
